--- a/resources/assets/less/bem/sticky-header.less
+++ b/resources/assets/less/bem/sticky-header.less
@@ -22,15 +22,15 @@
 
   &__body {
     width: 100%;
-    background-color: @osu-colour-b5;
+    background-color: @osu-colour-d4;
     padding: 10px;
   }
 
   &__breadcrumbs {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
   }
 
   &__content {
-    margin-top: 10px;
+    margin-top: 5px;
   }
 }
