Update post edit box

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -149,6 +149,7 @@
 @import "bem/forum-post-actions";
 @import "bem/forum-post-content";
 @import "bem/forum-post-edit";
+@import "bem/forum-post-edit-box";
 @import "bem/forum-post-info";
 @import "bem/forum-post-preview";
 @import "bem/forum-title";
