--- a/resources/assets/less/bem/forum-post-edit.less
+++ b/resources/assets/less/bem/forum-post-edit.less
@@ -103,7 +103,7 @@
   }
 
   &__buttons-bar {
-    margin: 0 -5px -5px;
+    margin: auto -5px -5px;
     display: flex;
     flex-direction: column;
     align-items: center;
