--- a/resources/assets/less/bem/user-action-button.less
+++ b/resources/assets/less/bem/user-action-button.less
@@ -67,7 +67,7 @@
     .default-text-shadow();
     min-width: 80px;
     width: auto;
-    height: auto;
+    height: 100%;
     padding: 10px 10px;
     border-radius: 10000px;
     font-weight: bold;
