Remove unused css and mobile post info

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -249,6 +249,7 @@
 @import "bem/password-reset";
 @import "bem/play-detail";
 @import "bem/popup-menu";
+@import "bem/post-box";
 @import "bem/post-editor";
 @import "bem/post-editor-footer";
 @import "bem/product-box";
