Circle border radius

--- a/resources/assets/less/bem/osu-switch-v2.less
+++ b/resources/assets/less/bem/osu-switch-v2.less
@@ -65,12 +65,12 @@
     }
 
     .@{_top}__input[type=radio] + & {
-      border-radius: 10000px;
+      border-radius: 50%;
 
       &::after {
         content: '';
         background-color: currentColor;
-        border-radius: 10000px;
+        border-radius: 50%;
         width: calc(100% - 6px);
         height: calc(100% - 6px);
       }
