--- a/resources/assets/less/bem/forum-post-info.less
+++ b/resources/assets/less/bem/forum-post-info.less
@@ -17,21 +17,35 @@
  */
 
 .forum-post-info {
-  width: 180px;
   flex: none;
   background-color: @osu-colour-b5;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 10px;
+  padding: 5px;
   text-align: center;
+  width: 45px;
+
+  @media @desktop {
+    width: 180px;
+    padding: 10px;
+  }
 
   &__row {
     margin: 5px 0;
+    display: none;
+
+    @media @desktop {
+      display: block;
+    }
 
     &--avatar {
       width: 100%;
-      padding: 0 40px;
+      display: block;
+
+      @media @desktop {
+        padding: 0 40px;
+      }
     }
 
     &--posts {
@@ -47,12 +61,15 @@
     }
 
     &--support-level {
-      .center-content();
       background-color: @osu-colour-pink-1;
       font-size: 8px; // icon size
       min-width: 50px;
       padding: 2px 5px;
       border-radius: 10000px;
+
+      @media @desktop {
+        .center-content();
+      }
     }
 
     &--username {
