Update secondary button color

--- a/resources/assets/less/bem/btn-osu-big.less
+++ b/resources/assets/less/bem/btn-osu-big.less
@@ -262,16 +262,16 @@
   &--forum-secondary {
     border-radius: 10000px;
     padding: 8px 20px;
-    background-color: @osu-colour-orange-3;
+    background-color: @osu-colour-blue-3;
     font-weight: normal;
     .default-text-shadow();
 
     .link-hover({
-      background-color: @osu-colour-orange-2;
+      background-color: @osu-colour-blue-2;
     });
 
     &[disabled] {
-      background-color: @osu-colour-orange-3;
+      background-color: @osu-colour-blue-3;
       color: @osu-colour-c1;
       opacity: 0.5;
     }
