--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -149,6 +149,7 @@
 @nav-search-icon-width: 30px;
 
 // here be font-sizes
+@font-size--tiny: 8px;
 @font-size--small: 10px;
 @font-size--small-2: 11px;
 @font-size--normal: 12px;
