--- a/resources/assets/less/bem/forum-user-badge.less
+++ b/resources/assets/less/bem/forum-user-badge.less
@@ -19,13 +19,13 @@
 .forum-user-badge {
     background-color: @osu-colour-b6;
     color: @osu-colour-lime-2;
-    font-size: @font-size--small;
+    font-size: @font-size--tiny;
     font-weight: 600;
     padding: 2px 10px;
     border-radius: 10000px;
     text-transform: uppercase;
 
-    &--inline {
-      margin-right: 5px;
+    @media @desktop {
+      font-size: @font-size--small;
     }
 }
