--- a/resources/assets/less/bem/mp-history-events.less
+++ b/resources/assets/less/bem/mp-history-events.less
@@ -20,7 +20,7 @@
   @_event-max-width: 640px;
 
   .event() {
-    background-color: #eee;
+    background-color: @osu-colour-b4;
     max-width: @_event-max-width;
     margin-left: auto;
     margin-right: auto;
