--- a/resources/assets/less/bem/mp-history-player-score.less
+++ b/resources/assets/less/bem/mp-history-player-score.less
@@ -29,7 +29,7 @@
     border-radius: @border-radius-base 0 0 @border-radius-base;
 
     @media @desktop {
-      width: 40px;
+      width: 50px;
     }
   }
 
@@ -85,10 +85,10 @@
   }
 
   &__username {
+    .link-default();
     font-weight: 700;
     font-style: italic;
     font-size: 18px;
-    color: @blue-text;
 
     padding-right: 5px;
 
@@ -122,7 +122,7 @@
 
   &__failed {
     font-size: 15px;
-    color: @red;
+    color: @osu-colour-red-1;
     font-weight: 700;
 
     padding-right: 20px;
@@ -164,13 +164,13 @@
 
     padding-right: 3px;
 
+    color: @osu-colour-c2;
+
     &--small {
-      color: #555;
       font-size: 10px;
     }
 
     &--large {
-      color: #999;
       font-size: 12px;
     }
   }
@@ -178,7 +178,7 @@
   &__stat-number {
     font-style: italic;
     font-weight: 700;
-    color: @purple-dark;
+    color: @osu-colour-c1;
 
     &--small {
       font-size: 12px;
@@ -190,7 +190,7 @@
 
     &--large {
       font-size: 20px;
-      color: @pink-darker;
+      color: @osu-colour-pink-1;
 
       @media @desktop {
         font-size: 25px;
