--- a/resources/assets/less/bem/forum-post.less
+++ b/resources/assets/less/bem/forum-post.less
@@ -141,7 +141,7 @@
 
   &__user {
     .link-default();
-    font-weight: bold;
+    font-weight: 600;
     font-size: @font-size--title-small;
 
     @media @desktop {
