Fix badge display on desktop

--- a/resources/assets/less/bem/user-group-badge.less
+++ b/resources/assets/less/bem/user-group-badge.less
@@ -116,9 +116,10 @@
     font-size: @font-size--tiny;
     padding-left: 0;
     padding-right: 0;
-    display: inline-block;
 
     @media @desktop {
+      margin: auto;
+      width: min-content;
       font-size: @font-size--small;
       padding-left: 20px;
       padding-right: 20px;
