Correct button activation state

--- a/resources/assets/less/bem/forum-post-edit.less
+++ b/resources/assets/less/bem/forum-post-edit.less
@@ -62,7 +62,7 @@
     &--deactivate {
       display: none;
 
-      .js-forum-topic-reply[data-state=active] & {
+      .js-forum-topic-reply[data-state=stick] & {
         display: block;
 
         @media @desktop {
