--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -122,7 +122,7 @@
       }
     }
 
-    &[data-state=active] {
+    &[data-state=stick] {
       position: fixed;
       z-index: @z-index--forum-topic-reply-stick;
       bottom: 0; // weird flashing in firefox android on certain scroll if using top
