Dark theme move dialog

--- a/resources/assets/less/bem/bootstrap/modal-body.less
+++ b/resources/assets/less/bem/bootstrap/modal-body.less
@@ -36,7 +36,8 @@
 
   &--page {
     .default-border-radius();
-    background-color: #fff;
+    background-color: @osu-colour-b4;
+    color: @osu-colour-c1;
   }
 
   // Elements
@@ -77,9 +78,9 @@
   }
 
   &__title {
-    color: @text-color;
+    color: @osu-colour-c1;
     font-size: 18px;
     font-style: normal;
-    margin: 0;
+    margin: 10px 0;
   }
 }
