--- a/resources/assets/less/bem/nav2-header.less
+++ b/resources/assets/less/bem/nav2-header.less
@@ -25,7 +25,7 @@
 
   &__body {
     width: 100%;
-    z-index: 1; // local context
+    z-index: 1; // local to its block element
   }
 
   &__menu-bg {
