--- a/resources/assets/less/bem/profile-extra-user-page.less
+++ b/resources/assets/less/bem/profile-extra-user-page.less
@@ -18,7 +18,9 @@
 
 .profile-extra-user-page {
   &--new {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   &__new-content {
