oauth-clients css class was supposed to have something in it

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -186,7 +186,6 @@
 @import "bem/login-box";
 @import "bem/logo";
 @import "bem/logo-menu";
-@import "bem/oauth-client-details";
 @import "bem/medals-group";
 @import "bem/mod";
 @import "bem/modding-profile-list";
@@ -218,6 +217,8 @@
 @import "bem/notification-popup-item-group";
 @import "bem/notification-type-group";
 @import "bem/oauth-client";
+@import "bem/oauth-client-details";
+@import "bem/oauth-clients";
 @import "bem/oauth-form";
 @import "bem/oauth-scopes";
 @import "bem/osu-layout";
