--- a/resources/assets/less/bem/oauth-clients.less
+++ b/resources/assets/less/bem/oauth-clients.less
@@ -16,53 +16,10 @@
  *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.oauth-client {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-
-  &__actions {
-    align-items: flex-start;
-  }
-
-  &__button {
-    .reset-input();
-    .default-text-shadow();
-    .link-white();
-    .link-plain();
-    .center-content();
-    flex: none;
-    margin: 0 10px;
-    padding: 10px 20px;
-    min-width: 100px;
-    border-radius: 10000px;
-
-    background-color: @red;
-
-    &:hover {
-      background-color: @red-light;
-    };
-
-    &--revoked {
-      background-color: #444;
-
-      &:hover {
-        background-color: #444;
-      };
-    }
-  }
-
-  &__name {
-    font-size: @font-size--title-small;
-    margin-bottom: 5px;
-    color: white;
-
-    &--link {
-      .reset-input();
-    }
-  }
-
-  &__scopes {
-    margin-top: 12px;
+.oauth-clients {
+  &__client {
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #444;
   }
 }
