--- a/resources/assets/less/bem/oauth-clients.less
+++ b/resources/assets/less/bem/oauth-clients.less
@@ -20,6 +20,6 @@
   &__client {
     margin-bottom: 10px;
     padding-bottom: 10px;
-    border-bottom: 1px solid #444;
+    border-bottom: 1px solid @osu-colour-b5;
   }
 }
