Limit height for signature preview

--- a/resources/assets/less/bem/account-edit-entry.less
+++ b/resources/assets/less/bem/account-edit-entry.less
@@ -213,6 +213,11 @@
     display: block;
     margin-right: 10px;
 
+    &--signature-preview {
+      max-height: @forum-signature-height;
+      overflow: hidden;
+    }
+
     .@{top}--wide & {
       max-width: @input-width-wide;
     }
