--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -87,6 +87,7 @@
 @forum-item-background-color-hover: @osu-colour-b3;
 @forum-item-animate: all 120ms;
 
+@forum-signature-height: 150px;
 
 // here be z-indexes
 @z-index--header-bg: -1;
