--- a/resources/assets/less/bem/forum-post.less
+++ b/resources/assets/less/bem/forum-post.less
@@ -189,7 +189,7 @@
       padding-bottom: 20px;
 
       .bbcode {
-        max-height: 150px;
+        max-height: @forum-signature-height;
         overflow: hidden;
       }
     }
