add edit button, make buttons smaller

--- a/resources/assets/less/bem/btn-osu-big.less
+++ b/resources/assets/less/bem/btn-osu-big.less
@@ -237,6 +237,10 @@
     margin: 0 5px;
   }
 
+  &--settings-oauth {
+    min-width: 70px;
+  }
+
   &--wrap-text {
     white-space: normal;
   }
@@ -379,5 +383,9 @@
       font-style: italic;
       .default-text-shadow;
     }
+  }
+
+  .oauth-client__actions & {
+    margin: 0 5px 5px 5px;
   }
 }
