--- a/resources/assets/less/bem/oauth-client.less
+++ b/resources/assets/less/bem/oauth-client.less
@@ -22,33 +22,11 @@
   justify-content: space-between;
 
   &__actions {
-    align-items: flex-start;
-  }
-
-  &__button {
-    .reset-input();
-    .default-text-shadow();
-    .link-white();
-    .link-plain();
-    .center-content();
     flex: none;
-    margin: 0 10px;
-    padding: 10px 20px;
-    min-width: 100px;
-    border-radius: 10000px;
 
-    background-color: @red;
-
-    &:hover {
-      background-color: @red-light;
-    };
-
-    &--revoked {
-      background-color: #444;
-
-      &:hover {
-        background-color: #444;
-      };
+    @media @mobile {
+      display: flex;
+      flex-direction: column;
     }
   }
 
