Fix button content color

--- a/resources/assets/less/bem/btn-circle.less
+++ b/resources/assets/less/bem/btn-circle.less
@@ -27,20 +27,21 @@
 
   flex: none;
   background-color: @osu-colour-l4;
-  color: #fff;
+  color: @osu-colour-c1;
   transition: all 120ms ease-in-out;
   font-size: 14px;
 
   &:focus {
     background-color: @osu-colour-l4;
+    color: @osu-colour-c1;
     text-decoration: none;
     box-shadow: 0 5px 15px fade(#000, 40%);
   }
 
   &:hover,
   &:active {
-    color: #fff;
     background-color: @osu-colour-l3;
+    color: @osu-colour-c1;
     text-decoration: none;
     box-shadow: 0 5px 15px fade(#000, 40%);
   }
