Update styling for feature request section

--- a/resources/assets/less/bem/forum-topic-feature-vote.less
+++ b/resources/assets/less/bem/forum-topic-feature-vote.less
@@ -17,8 +17,12 @@
  */
 
 .forum-topic-feature-vote {
+  .default-gutter-v2();
+  padding-top: 10px;
+  padding-bottom: 10px;
   text-align: center;
   line-height: normal;
+  background-color: @osu-colour-b2;
 
   &__button {
     margin: 5px;
