No need for variable

--- a/resources/assets/less/bem/forum-post-content.less
+++ b/resources/assets/less/bem/forum-post-content.less
@@ -18,13 +18,12 @@
 
 .forum-post-content {
   .content-font();
-  @_font-size: @font-size--normal-2;
   word-wrap: break-word;
   color: @osu-colour-c1;
   font-size: @font-size--normal;
 
   @media @desktop {
-    font-size: @_font-size;
+    font-size: @font-size--normal-2;
   }
 
   &--edit {
