Add support for mirror mod in score listing

--- a/resources/assets/less/bem/mod.less
+++ b/resources/assets/less/bem/mod.less
@@ -44,6 +44,7 @@
   .all(HD, 'hidden');
   .all(HR, 'hard-rock');
   .all(HT, 'half');
+  .all(MR, 'mirror');
   .all(NC, 'nightcore');
   .all(NF, 'no-fail');
   .all(NM, 'no-mod');
