--- a/resources/assets/less/bem/forum-post.less
+++ b/resources/assets/less/bem/forum-post.less
@@ -98,6 +98,7 @@
     &--signature {
       border-top: 1px solid @osu-colour-b1;
 
+      .content-font();
       padding: 10px 0 0;
       margin: 0 @gutter-v2 @_padding-content @_padding-content;
       color: @osu-colour-c2;
