--- a/resources/assets/less/bem/forum-post-edit.less
+++ b/resources/assets/less/bem/forum-post-edit.less
@@ -24,6 +24,7 @@
   display: flex;
   flex-direction: column;
   min-height: 0; // prevent preview overflow in mobile
+  min-width: 0; // prevent image overflow
 
   &--create {
     .default-gutter-v2();
