--- a/resources/assets/less/bbcode.less
+++ b/resources/assets/less/bbcode.less
@@ -35,7 +35,7 @@
 
   // heading tag
   h2 {
-    font-size: @font-size--forum-post-heading;
+    font-size: 1.5em;
     color: @osu-colour-l1;
   }
 
