Increase content font size

--- a/resources/assets/less/bem/forum-post-content.less
+++ b/resources/assets/less/bem/forum-post-content.less
@@ -23,7 +23,7 @@
   font-size: @font-size--normal;
 
   @media @desktop {
-    font-size: @font-size--normal-2;
+    font-size: @font-size--title-small;
   }
 
   &--edit {
