--- a/resources/assets/less/bbcode.less
+++ b/resources/assets/less/bbcode.less
@@ -81,6 +81,18 @@
     max-width: 100%;
   }
 
+  ol, ul {
+    padding-left: 20px;
+
+    ol {
+      font-size: 0.85em;
+
+      ol {
+        font-size: 1em;
+      }
+    }
+  }
+
   pre {
     .default-border-radius();
     white-space: pre-wrap;
