Add quote header margin

--- a/resources/assets/less/bbcode.less
+++ b/resources/assets/less/bbcode.less
@@ -61,6 +61,7 @@
       font-size: inherit;
       color: @osu-colour-c1;
       margin: 0;
+      margin-bottom: 10px;
     }
 
     // second and deeper levels
