--- a/resources/assets/less/bem/wiki-main-page-panel.less
+++ b/resources/assets/less/bem/wiki-main-page-panel.less
@@ -16,7 +16,7 @@
  *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
  */
 
- .wiki-main-page-panel {
+.wiki-main-page-panel {
   @_top: wiki-main-page-panel;
 
   min-height: 150px;
@@ -51,7 +51,7 @@
     font-size: 20px;
     font-weight: 300;
 
-    padding-bottom: 40px;
+    margin-bottom: 40px;
 
     .@{_top}:first-child & {
       font-size: 30px;
