--- a/resources/assets/less/bem/wiki-search.less
+++ b/resources/assets/less/bem/wiki-search.less
@@ -20,6 +20,7 @@
   padding-top: 10px;
 
   &__bar {
+    .default-border-radius();
     height: 54px;
     width: 100%;
     padding: 0 20px;
@@ -31,7 +32,6 @@
     font-size: @font-size--wiki-search;
 
     border: 2px solid @osu-colour-orange-1;
-    .default-border-radius;
 
     &::placeholder {
       color: @osu-colour-c2;
@@ -39,13 +39,13 @@
   }
 
   &__button {
+    .center-content();
     height: 54px;
     font-size: 18px;
 
     color: @osu-colour-c1;
 
     padding-right: 20px;
-    .center-content;
 
     &:hover {
       cursor: pointer;
