--- a/resources/assets/less/bem/osu-page-header.less
+++ b/resources/assets/less/bem/osu-page-header.less
@@ -130,7 +130,7 @@
     .at2x-simple("/images/headers/tournament.jpg");
   }
 
-  .wiki {
+  &--wiki {
     .default-box-shadow();
     .at2x-simple("/images/headers/wiki.jpg");
     height: 125px;
@@ -139,17 +139,10 @@
       padding-left: @padding-wiki-desktop;
       padding-right: @padding-wiki-desktop;
     }
-  }
 
-  &--wiki {
-    // less doesn't seem to support mixins named
-    // using parent selectors, so we have to do it this way
-    .wiki;
-  }
-
-  &--wiki-main-page {
-    .wiki;
-    height: 250px;
+    .@{top}--wiki-main-page& {
+      height: 250px;
+    }
   }
 
   &__actions {
@@ -320,6 +313,10 @@
       margin-bottom: 0;
       padding-bottom: (@main-padding - @border-height);
       border-bottom: @border-height solid @yellow;
+    }
+
+    .@{top}--wiki-main-page & {
+      border: 0;
     }
 
     .@{top}--wiki-main-page &--main {
