--- a/resources/assets/less/bem/wiki-main-page-panel.less
+++ b/resources/assets/less/bem/wiki-main-page-panel.less
@@ -19,6 +19,9 @@
 .wiki-main-page-panel {
   @_top: wiki-main-page-panel;
 
+  .default-border-radius();
+  .default-box-shadow();
+
   min-height: 150px;
   padding: 30px;
 
@@ -26,8 +29,6 @@
 
   text-align: center;
 
-  .default-border-radius;
-  .default-box-shadow;
 
   &--full {
     @media @desktop {
