--- a/resources/assets/less/bem/wiki-search.less
+++ b/resources/assets/less/bem/wiki-search.less
@@ -35,11 +35,9 @@
   }
 
   &__input {
-    background: transparent;
+    .reset-input();
     color: @osu-colour-c1;
     flex-grow: 1;
-
-    border: none;
 
     &::placeholder {
       color: @osu-colour-c2;
