--- a/resources/assets/less/bem/oauth-client-details.less
+++ b/resources/assets/less/bem/oauth-client-details.less
@@ -29,7 +29,7 @@
   max-width: 480px;
 
   background-color: @osu-colour-b4;
-  color: white;
+  color: @osu-colour-c1;
 
   &__buttons {
     display: grid;
