"Automatic" width for upload image button

--- a/resources/assets/less/bem/btn-osu-big.less
+++ b/resources/assets/less/bem/btn-osu-big.less
@@ -51,8 +51,8 @@
   }
 
   &--account-edit {
-    display: block;
-    width: @avatar-size--base;
+    display: inline-block;
+    max-width: @avatar-size--base;
     padding: 7px 10px;
     text-align: left;
   }
