min-width, not max-width

--- a/resources/assets/less/bem/btn-osu-big.less
+++ b/resources/assets/less/bem/btn-osu-big.less
@@ -51,8 +51,7 @@
   }
 
   &--account-edit {
-    display: inline-block;
-    max-width: @avatar-size--base;
+    min-width: @avatar-size--base;
     padding: 7px 10px;
     text-align: left;
   }
