--- a/resources/assets/less/bem/search-wiki-page.less
+++ b/resources/assets/less/bem/search-wiki-page.less
@@ -21,6 +21,10 @@
   justify-content: space-between;
   align-items: center;
 
+  &__content {
+    min-width: 0;
+  }
+
   &__more {
     color: @osu-colour-f1;
     .link-hover({ color: @osu-colour-f1 });
