Add 'new' badge to albums created within the last month

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -25,6 +25,7 @@
 @import "bem/admin-menu";
 @import "bem/admin-menu-item";
 @import "bem/artist";
+@import "bem/artist-album";
 @import "bem/artist-link-button";
 @import "bem/avatar";
 @import "bem/avatar-ribbon";
