--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -248,6 +248,7 @@
 @import "bem/page-title";
 @import "bem/pagination-v2";
 @import "bem/password-reset";
+@import "bem/pill-badge";
 @import "bem/play-detail";
 @import "bem/popup-menu";
 @import "bem/post-box";
