--- a/resources/assets/less/bem/artist.less
+++ b/resources/assets/less/bem/artist.less
@@ -30,6 +30,12 @@
     flex-wrap: wrap;
   }
 
+  &__badge-wrapper {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
+
   &__box {
     margin: 10px;
 
@@ -111,6 +117,7 @@
   &__portrait-wrapper {
     width: 250px;
     height: 250px;
+
     &--index {
       width: 200px;
       height: 200px;
@@ -140,6 +147,10 @@
       @media @desktop {
         margin: 0;
       }
+    }
+
+    &--new {
+      box-shadow: 25px -10px 50px .osu-hsla(@osu-colour-orange-1, 0.2)[@hsla];
     }
   }
 
