--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -27,6 +27,7 @@
 @import "bem/artist";
 @import "bem/artist-album";
 @import "bem/artist-link-button";
+@import "bem/artist-sidebar-album";
 @import "bem/avatar";
 @import "bem/avatar-ribbon";
 @import "bem/back-to-top";
