--- a/resources/assets/less/bem/artist-album.less
+++ b/resources/assets/less/bem/artist-album.less
@@ -55,7 +55,9 @@
 
     &--new {
       &::after {
-        display: block;
+        .full-size();
+        content: '';
+        background: linear-gradient(to left, @osu-colour-orange-1 0%, transparent 30%)
       }
     }
   }
