Change 'new' badge on the Featured Artist index to also show when artists have new tracks added

--- a/resources/assets/less/bem/artist.less
+++ b/resources/assets/less/bem/artist.less
@@ -23,11 +23,11 @@
     padding: 10px;
     font-weight: 300;
     .default-box-shadow();
-
     display: flex;
     justify-content: space-around;
     flex-direction: row;
     flex-wrap: wrap;
+    overflow: hidden;
   }
 
   &__badge-wrapper {
