Fix color of beatmap search text

--- a/resources/assets/less/bem/beatmapsets-search.less
+++ b/resources/assets/less/bem/beatmapsets-search.less
@@ -97,6 +97,8 @@
     font-style: italic;
     font-weight: lighter;
 
+    color: @osu-colour-b3;
+
     &:focus {
       outline: none;
       border-color: @osu-colour-l1;
