--- a/resources/assets/less/bem/wiki-main-page.less
+++ b/resources/assets/less/bem/wiki-main-page.less
@@ -17,7 +17,6 @@
  */
 
 .wiki-main-page {
-  @_top: wiki-main-page;
   background: @osu-colour-b5;
 
   &__blurb {
@@ -49,7 +48,7 @@
       margin-bottom: 40px;
     }
 
-    .wiki-main-page-panel:first-child & {
+    .wiki-main-page-panel--full & {
       font-size: 30px;
     }
   }
