Cleanup styles and buttons

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -60,6 +60,7 @@
 @import "bem/beatmap-pack-download";
 @import "bem/beatmap-pack-items";
 @import "bem/beatmap-packs";
+@import "bem/beatmap-packs-header";
 @import "bem/beatmap-playcount";
 @import "bem/beatmap-score-top";
 @import "bem/beatmap-scoreboard-table";
