--- a/resources/assets/less/bem/beatmap-packs-header.less
+++ b/resources/assets/less/bem/beatmap-packs-header.less
@@ -16,7 +16,40 @@
  *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.beatmap-packs {
-  padding: @beatmappack-listing--gutter;
-  background-color: @osu-colour-b4;
+.beatmap-packs-header {
+  &__blurb {
+    padding: 20px 40px;
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.8);
+    font-size: @font-size--title-small;
+    font-weight: 300;
+    line-height: 1.3;
+    text-align: center;
+  }
+
+  &__header {
+    padding: 40px 0 45px;
+  }
+
+  &__icon {
+    .at2x-simple("/images/headers/beatmappacks-icon.png");
+    width: @header-icon-size;
+    height: @header-icon-size;
+    margin: @header-icon-margin auto;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  &__important {
+    font-size: 110%;
+    font-weight: 600;
+    letter-spacing: 0.1em;
+  }
+
+  &__title {
+    font-weight: 300;
+    font-size: @font-size--header-title;
+    color: #fff;
+  }
 }
