--- a/resources/assets/less/bem/beatmap-pack.less
+++ b/resources/assets/less/bem/beatmap-pack.less
@@ -22,22 +22,9 @@
   width: 100%;
   margin: 2px 0;
 
-  &__body {
-    background-color: @osu-colour-b3;
-  }
-
-  &__header {
-    padding: @beatmappack-listing--gutter;
-    background-color: @osu-colour-b3;
-    cursor: pointer;
-
-    .js-accordion__item--expanded & {
-      background-color: @osu-colour-b2;
-    }
-
-    &:hover {
-      background-color: @osu-colour-b2;
-    }
+  &.js-accordion__item--expanded {
+    .thicker-box-shadow();
+    z-index: 1;
   }
 
   &__author {
@@ -48,22 +35,42 @@
     }
   }
 
+  &__body {
+    background-color: @osu-colour-b3;
+  }
+
   &__date {
     font-size: 90%;
   }
 
-  &__name {
-    &.beatmap-packs__cell {
-      flex-grow: 4;
-    }
+  &__details {
+    margin-left: auto;
+    padding-left: @beatmappack-listing--gutter;
+    text-align: right;
+    justify-content: flex-end;
+    color: @osu-colour-c1;
+  }
+
+  &__header {
+    .reset-input();
+    width: 100%;
+    padding: @beatmappack-listing--gutter;
+    background-color: @osu-colour-b3;
+    cursor: pointer;
+    display: flex;
 
     .js-accordion__item--expanded & {
-      font-weight: 600;
+      background-color: @osu-colour-b2;
+    }
+
+    &:hover {
+      background-color: @osu-colour-b2;
     }
   }
 
-  &.js-accordion__item--expanded {
-    .thicker-box-shadow();
-    z-index: 1;
+  &__name {
+    .js-accordion__item--expanded & {
+      font-weight: 600;
+    }
   }
 }
