--- a/resources/assets/less/bem/beatmap-packs.less
+++ b/resources/assets/less/bem/beatmap-packs.less
@@ -19,4 +19,9 @@
 .beatmap-packs {
   padding: @beatmappack-listing--gutter;
   background-color: @osu-colour-b4;
+
+  &__footer-links {
+    text-align: right;
+    padding-top: @beatmappack-listing--gutter;
+  }
 }
