Accidentally removed class
Fixed the color while at it.

--- a/resources/assets/less/bem/beatmap-packs-header.less
+++ b/resources/assets/less/bem/beatmap-packs-header.less
@@ -47,6 +47,11 @@
     letter-spacing: 0.1em;
   }
 
+  &__scary {
+    color: @osu-colour-c2;
+    font-weight: 600;
+  }
+
   &__title {
     font-weight: 300;
     font-size: @font-size--header-title;
