Show pinned status on comments

--- a/resources/assets/less/bem/comment.less
+++ b/resources/assets/less/bem/comment.less
@@ -270,6 +270,12 @@
     &--username-link {
       .link-default();
     }
+
+    &--pinned {
+      & .fa {
+        vertical-align: middle;
+      }
+    }
   }
 
   &__top-show-replies {
