Show pinned comments at the top of the listing

--- a/resources/assets/less/bem/comments.less
+++ b/resources/assets/less/bem/comments.less
@@ -58,6 +58,10 @@
       display: flex;
       justify-content: space-between;
     }
+
+    &--pinned {
+      padding-top: 0;
+    }
   }
 
   &__new {
