--- a/resources/assets/less/bem/comment.less
+++ b/resources/assets/less/bem/comment.less
@@ -41,6 +41,10 @@
       border-bottom-width: 0;
     }
 
+    &:last-of-type {
+      border-bottom-width: 0;
+    }
+
     @media @desktop {
       padding-left: @_gutter-desktop-left;
       padding-right: @_gutter-desktop-right;
