--- a/resources/assets/less/bem/news-card.less
+++ b/resources/assets/less/bem/news-card.less
@@ -36,6 +36,20 @@
     min-height: 150px;
   }
 
+  &--landing {
+    margin-bottom: 20px;
+
+    @media @desktop {
+      margin-bottom: 0;
+      margin-right: 20px;
+      flex-basis: calc(25% - 15px);
+    }
+
+    &:last-of-type {
+      margin: 0;
+    }
+  }
+
   &__author {
     font-size: @font-size--title-small;
     font-weight: 600;
