User settable option for problem on qualified maps

--- a/resources/assets/less/bem/account-edit-entry.less
+++ b/resources/assets/less/bem/account-edit-entry.less
@@ -107,6 +107,10 @@
     margin: -5px -10px;
   }
 
+  &__checkboxes-label {
+    margin-bottom: 10px;
+  }
+
   &__checkboxes-status {
     pointer-events: none;
     display: flex;
