--- a/resources/assets/less/bem/landing-news.less
+++ b/resources/assets/less/bem/landing-news.less
@@ -22,8 +22,8 @@
 
   @media @desktop {
     flex-direction: row;
+    margin: -10px;
   }
 
-  padding: 20px;
-  text-align: center;
+  padding: 20px 0;
 }
