--- a/resources/assets/less/bem/landing-news.less
+++ b/resources/assets/less/bem/landing-news.less
@@ -22,6 +22,7 @@
   &__posts {
     display: flex;
     flex-direction: column;
+    margin: -10px 0;
 
     @media @desktop {
       flex-direction: row;
