--- a/resources/assets/less/bem/news-card.less
+++ b/resources/assets/less/bem/news-card.less
@@ -38,6 +38,7 @@
 
   &--landing {
     margin: 10px;
+    height: 150px;
   }
 
   &__author {
@@ -75,7 +76,7 @@
     .full-size-overflow();
     background-image: linear-gradient(to bottom, transparent, .osu-hsla(@osu-colour-b6, 0.5)[@hsla]);
 
-    .@{_top}--index & {
+    .@{_top}--hover & {
       &::after {
         .full-size-overflow();
         content: '';
